deployments/conf/service-gateway-mq.yml
kind: Service
apiVersion: v1
metadata:
  name: mlx-gateway-mq
  labels:
    app: mlx
spec:
  ports:
    - name: proxy
      protocol: TCP
      port: 5050
      targetPort: 5050
  selector:
    deploy: mlx-provider-gateway-mq
  type: ClusterIP
  sessionAffinity: None
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
status:
  loadBalancer: {}
